Fix the long title word-wrap

--- a/src/components/Carousel/CarouselItem/CarouselItem.scss
+++ b/src/components/Carousel/CarouselItem/CarouselItem.scss
@@ -24,12 +24,10 @@
     &-title {
       margin-bottom: 8px;
       font-size: 18px;
-      white-space: nowrap;
+      overflow-wrap: break-word;
       width: 100%;
-      overflow: hidden;
       padding: 0 5px;
       box-sizing: border-box;
-      text-overflow: ellipsis;
     }
 
     &:hover .carousel__item-title {
